# ATCS-2022

./: .gitignore  README.md
portfolio/: aboutme.html  contact.html  experience.html  index.html  stylesheet.css
twitter/: models.py  pyproject.toml  test_twitter.py  twitter.db  twitter.py
