[tool.poetry]
name = "twitter"
version = "0.1.0"
description = ""
authors = ["0xphoton <42502920+maxtalwar@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.2.2"
SQLAlchemy = "^2.0.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
